<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="103dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAtbash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/batbash" />

            <Button
                android:id="@+id/btnCesar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bcesar"/>


            <Button
                android:id="@+id/btnVigenere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bvigenere"/>


            <Button
                android:id="@+id/btnHomophone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bhomophone"/>


            <Button
                android:id="@+id/btnPlayfair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bplayfair"/>


            <Button
                android:id="@+id/btnHill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bhill"/>


            <Button
                android:id="@+id/btnDES"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bdes"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>